@@ -201,7 +201,7 @@ unit_animation::unit_animation(const config& cfg,const std::string frame_string 
 
 }
 
-int unit_animation::matches(const game_display &disp,const map_location& loc, const unit* my_unit,const std::string & event,const int value,hit_type hit,const attack_type* attack,const attack_type* second_attack, int swing_num) const
+int unit_animation::matches(const game_display &disp,const map_location& loc,const map_location& second_loc, const unit* my_unit,const std::string & event,const int value,hit_type hit,const attack_type* attack,const attack_type* second_attack, int swing_num) const
 {
 	int result = base_score_;
 	if(!event.empty()&&!event_.empty()) {
@@ -240,13 +240,12 @@ int unit_animation::matches(const game_display &disp,const map_location& loc, co
 			result++;
 		}
 		if(!secondary_unit_filter_.empty()) {
-			const map_location facing_loc = loc.get_direction(my_unit->facing());
 			unit_map::const_iterator unit;
 			for(unit=disp.get_const_units().begin() ; unit != disp.get_const_units().end() ; unit++) {
-				if(unit->first == facing_loc) {
+				if(unit->first == second_loc) {
 					std::vector<config>::const_iterator second_itor;
 					for(second_itor = secondary_unit_filter_.begin(); second_itor != secondary_unit_filter_.end(); second_itor++) {
-						if(!unit->second.matches_filter(&(*second_itor),facing_loc)) return MATCH_FAIL;
+						if(!unit->second.matches_filter(&(*second_itor),second_loc)) return MATCH_FAIL;
 						result++;
 					}
 
@@ -854,7 +853,8 @@ void unit_animation::particule::start_animation(int start_time, bool cycles)
 }
 
 void unit_animator::add_animation(unit* animated_unit,const std::string& event,
-		const map_location &src , const int value,bool with_bars,bool cycles,
+		const map_location &src , const map_location &dst ,
+		const int value,bool with_bars,bool cycles,
 		const std::string text,const Uint32 text_color,
 		const unit_animation::hit_type hit_type,
 		const attack_type* attack, const attack_type* second_attack, int swing_num)
@@ -868,7 +868,7 @@ void unit_animator::add_animation(unit* animated_unit,const std::string& event,
 	tmp.src = src;
 	tmp.with_bars= with_bars;
 	tmp.cycles = cycles;
-	tmp.animation = animated_unit->choose_animation(*disp,src,event,value,hit_type,attack,second_attack,swing_num);
+	tmp.animation = animated_unit->choose_animation(*disp,src,event,dst,value,hit_type,attack,second_attack,swing_num);
 	if(!tmp.animation) return;
 
 
@@ -877,7 +877,8 @@ void unit_animator::add_animation(unit* animated_unit,const std::string& event,
 	animated_units_.push_back(tmp);
 }
 void unit_animator::replace_anim_if_invalid(unit* animated_unit,const std::string& event,
-		const map_location &src , const int value,bool with_bars,bool cycles,
+		const map_location &src , const map_location & dst,
+		const int value,bool with_bars,bool cycles,
 		const std::string text,const Uint32 text_color,
 		const unit_animation::hit_type hit_type,
 		const attack_type* attack, const attack_type* second_attack, int swing_num)
@@ -886,7 +887,7 @@ void unit_animator::replace_anim_if_invalid(unit* animated_unit,const std::strin
 	game_display*disp = game_display::get_singleton();
 	if(animated_unit->get_animation() &&
 			!animated_unit->get_animation()->animation_finished_potential() &&
-			animated_unit->get_animation()->matches(*disp,src,animated_unit,event,value,hit_type,attack,second_attack,swing_num) >unit_animation::MATCH_FAIL) {
+			animated_unit->get_animation()->matches(*disp,src,dst,animated_unit,event,value,hit_type,attack,second_attack,swing_num) >unit_animation::MATCH_FAIL) {
 		anim_elem tmp;
 		tmp.my_unit = animated_unit;
 		tmp.text = text;
@@ -897,7 +898,7 @@ void unit_animator::replace_anim_if_invalid(unit* animated_unit,const std::strin
 		tmp.animation = NULL;
 		animated_units_.push_back(tmp);
 	}else {
-		add_animation(animated_unit,event,src,value,with_bars,cycles,text,text_color,hit_type,attack,second_attack,swing_num);
+		add_animation(animated_unit,event,src,dst,value,with_bars,cycles,text,text_color,hit_type,attack,second_attack,swing_num);
 	}
 }
 void unit_animator::start_animations()
